Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 </tbody>
 </table>
 
+<p>Lectures of previous years are available in <a href="https://github.com/MIPT-ILab/mipt-mips">repo</a>.</p>
+
 <h3>
 <a id="how-to-play-audio-narrations-in-powerpoint" class="anchor" href="#how-to-play-audio-narrations-in-powerpoint" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to play audio narrations in Powerpoint</h3>
 
@@ -81,15 +83,10 @@
 
 <p>Then click <em>From Beginning</em> button (point 2), which starts the presentation with audio and automatic animations from the first foil. You also can start this mode from any slide, pause it and so on. If you want to look the presentation without animations and audio just deselect the checkboxes.</p>
 
-<h3>
-<a id="previous-years-lectures" class="anchor" href="#previous-years-lectures" aria-hidden="true"><span class="octicon octicon-link"></span></a>Previous' years lectures</h3>
-
-<p>Lectures which were read in 2012-2015 years are available on this GitHub <a href="https://github.com/MIPT-ILab/mipt-mips">repo</a>.</p>
-
 <h2>
 <a id="course-repo" class="anchor" href="#course-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course repo</h2>
 
-<p>In our <a href="https://github.com/MIPT-ILab/mipt-mips-2015">repo</a> you may find introduction to project's infrastructure, code style guidelines, assignments and a lot more.</p>
+<p>In our <a href="https://github.com/MIPT-ILab/mipt-mips-2015">production repo</a> you may find introduction to project's infrastructure, code style guidelines, assignments and a lot more.</p>
 
 <h2>
 <a id="useful-books-and-materials" class="anchor" href="#useful-books-and-materials" aria-hidden="true"><span class="octicon octicon-link"></span></a>Useful books and materials</h2>
