Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 <h2>
 <a id="course-repo" class="anchor" href="#course-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course repo</h2>
 
-<p>In our <a href="https://github.com/MIPT-ILab/mipt-mips-2015">production repo</a> you may find introduction to project's infrastructure, code style guidelines, assignments and a lot more.</p>
+<p>In our <a href="https://github.com/MIPT-ILab/mipt-mips-2015">production repo</a> you may find C++ sources required to complete this year course assignments — implementation of MIPS simulator.</p>
+
+<p>That repo has a lot of useful <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki">Wiki manuals</a> about Git, MIPS, C++, Make utilites and so on.</p>
 
 <h2>
 <a id="useful-books-and-materials" class="anchor" href="#useful-books-and-materials" aria-hidden="true"><span class="octicon octicon-link"></span></a>Useful books and materials</h2>
