--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <td align="center">2</td>
 <td align="center">26 Sep</td>
 <td>P1: Basics of Simulator Development</td>
-<td></td>
+<td><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_1__26_Sep__Basics_of_Simulator_Development__Eng_text__No_audio.pptx?raw=true">PPTX</a></td>
 <td></td>
 </tr>
 </tbody>
