Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 <td align="center">26 Sep</td>
 <td>P1: Basics of Simulator Development</td>
 <td><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_1__26_Sep__Basics_of_Simulator_Development__Eng_text__No_audio.pptx?raw=true">PPTX</a></td>
-<td></td>
+<td>Commit your name into members.txt file. Get help in our <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Git-&amp;-GitHub-cheat-sheetSVN%20Cheat%20Sheet">Git &amp; GitHub cheat sheet</a>
+</td>
 </tr>
 </tbody>
 </table>
