Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
 <td>Commit your name into members.txt file. Get help in our <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Git-&amp;-GitHub-cheat-sheetSVN%20Cheat%20Sheet">Git &amp; GitHub cheat sheet</a>
 </td>
 </tr>
+<tr>
+<td align="center">3</td>
+<td align="center">02 Oct</td>
+<td>L2: Layers of Computer Science, ISA and uArch</td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table>
 
