Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
 </thead>
 <tbody>
 <tr>
-<td align="center"></td>
+<td align="center"><img src="https://avatars3.githubusercontent.com/u/11466405?s=150" alt=""></td>
 <td align="center"><a href="mailto:pavel.kryukov@phystech.edu">Pavel Kryukov / Павел Крюков</a></td>
 </tr>
 <tr>
-<td align="center"></td>
+<td align="center"><img src="https://avatars3.githubusercontent.com/u/13997956?s=150" alt=""></td>
 <td align="center"><a href="mailto:igor.smirnov@phystech.edu">Igor Smirnov / Игорь Смирнов</a></td>
 </tr>
 </tbody>
