Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -153,24 +153,8 @@
 <h3>
 <a id="current-mentors" class="anchor" href="#current-mentors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current mentors</h3>
 
-<table>
-<thead>
-<tr>
-<th align="center">Photo</th>
-<th align="center">Name and contact info</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td align="center"><img src="https://avatars3.githubusercontent.com/u/11466405?s=150" alt=""></td>
-<td align="center"><a href="mailto:pavel.kryukov@phystech.edu">Pavel Kryukov / Павел Крюков</a></td>
-</tr>
-<tr>
-<td align="center"><img src="https://avatars3.githubusercontent.com/u/13997956?s=150" alt=""></td>
-<td align="center"><a href="mailto:igor.smirnov@phystech.edu">Igor Smirnov / Игорь Смирнов</a></td>
-</tr>
-</tbody>
-</table>
+<p>:----: | :----:
+<img src="https://avatars3.githubusercontent.com/u/11466405?s=150" alt=""> | <img src="https://avatars3.githubusercontent.com/u/13997956?s=150" alt=""> <a href="https://github.com/pavelkryukov">Pavel Kryukov / Павел Крюков</a> | <a href="https://github.com/igorsmir-ilab">Igor Smirnov / Игорь Смирнов</a> </p>
 
 <h3>
 <a id="special-thanks" class="anchor" href="#special-thanks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Special thanks</h3>
