Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -153,8 +153,20 @@
 <h3>
 <a id="current-mentors" class="anchor" href="#current-mentors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current mentors</h3>
 
-<p>:----: | :----:
-<img src="https://avatars3.githubusercontent.com/u/11466405?s=150" alt=""> | <img src="https://avatars3.githubusercontent.com/u/13997956?s=150" alt=""> <a href="https://github.com/pavelkryukov">Pavel Kryukov / Павел Крюков</a> | <a href="https://github.com/igorsmir-ilab">Igor Smirnov / Игорь Смирнов</a> </p>
+<table>
+<thead>
+<tr>
+<th align="center"><img src="https://avatars3.githubusercontent.com/u/11466405?s=150" alt=""></th>
+<th align="center"><img src="https://avatars3.githubusercontent.com/u/13997956?s=150" alt=""></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="center"><a href="https://github.com/pavelkryukov">Pavel Kryukov</a></td>
+<td align="center"><a href="https://github.com/igorsmir-ilab">Igor Smirnov</a></td>
+</tr>
+</tbody>
+</table>
 
 <h3>
 <a id="special-thanks" class="anchor" href="#special-thanks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Special thanks</h3>
