Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img src="https://avatars3.githubusercontent.com/u/11466405?s=150" alt=""></th>
-<th align="center"><img src="https://avatars3.githubusercontent.com/u/13997956?s=150" alt=""></th>
+<th align="center"><a href="https://github.com/pavelkryukov">Pavel Kryukov</a></th>
+<th align="center"><a href="https://github.com/igorsmir-ilab">Igor Smirnov</a></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><a href="https://github.com/pavelkryukov">Pavel Kryukov</a></td>
-<td align="center"><a href="https://github.com/igorsmir-ilab">Igor Smirnov</a></td>
+<td align="center"><img src="https://avatars3.githubusercontent.com/u/11466405?s=150" alt=""></td>
+<td align="center"><img src="https://avatars3.githubusercontent.com/u/13997956?s=150" alt=""></td>
 </tr>
 </tbody>
 </table>
