Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -175,8 +175,10 @@
 
 <ul>
 <li>Nikolay Kosarev (2009/2010)</li>
-<li>Yuriy Baida (2010/2011)</li>
-<li>Grigory Rechistov (2010/2011)</li>
+<li>
+<a href="https://github.com/megabyde">Yuriy Baida</a> (2010/2011)</li>
+<li>
+<a href="https://github.com/grigory-rechistov">Grigory Rechistov</a> (2010/2011)</li>
 <li>Alexandr Titov (2009/2010 — 2014/2015)</li>
 </ul>
 
