Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -83,13 +83,9 @@
 <h3>
 <a id="how-to-play-audio-narrations-in-powerpoint" class="anchor" href="#how-to-play-audio-narrations-in-powerpoint" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to play audio narrations in Powerpoint</h3>
 
-<p>Some presentations contain recorded audio from the seminar (narrations). Usually, it is marked with phrase <em>"Rus/End audio"</em> near a link in the table above. Those presentations that contain narrations can be played in <a href="http://office.microsoft.com/en-us/powerpoint/">MS Powerpoint</a> as an ordinary video (we have verified it in Powerpoint 2010).</p>
-
-<p>To start playing select the following values in the checkboxes on <em>Slide Show</em> tab (point 1):</p>
+<p>Some presentations contain narrations, they are marked with phrase <em>"Rus/Eng audio"</em>. You can play them in <a href="http://office.microsoft.com/en-us/powerpoint/">MS Powerpoint</a> as an ordinary video. To start playing select the following values in the checkboxes on <em>Slide Show</em> tab (point 1). Then click <em>From Beginning</em> button (point 2), which starts the presentation with audio and automatic animations from the first foil. You also can start this mode from any slide, pause it and so on. If you want to look the presentation without animations and audio just deselect the checkboxes.</p>
 
 <p><img src="https://raw.githubusercontent.com/MIPT-ILab/mipt-mips/master/pictures/how_to_play_narrations_in_powerpoint.png" alt=""></p>
-
-<p>Then click <em>From Beginning</em> button (point 2), which starts the presentation with audio and automatic animations from the first foil. You also can start this mode from any slide, pause it and so on. If you want to look the presentation without animations and audio just deselect the checkboxes.</p>
 
 <h2>
 <a id="course-repo" class="anchor" href="#course-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course repo</h2>
