--- a/index.html
+++ b/index.html
@@ -78,14 +78,8 @@
 </tbody>
 </table>
 
-<p>Lectures of previous years are available in <a href="https://github.com/MIPT-ILab/mipt-mips">repo</a>.</p>
-
-<h3>
-<a id="how-to-play-audio-narrations-in-powerpoint" class="anchor" href="#how-to-play-audio-narrations-in-powerpoint" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to play audio narrations in Powerpoint</h3>
-
-<p>Some presentations contain narrations, they are marked with phrase <em>"Rus/Eng audio"</em>. You can play them in <a href="http://office.microsoft.com/en-us/powerpoint/">MS Powerpoint</a> as an ordinary video. To start playing select the following values in the checkboxes on <em>Slide Show</em> tab (point 1). Then click <em>From Beginning</em> button (point 2), which starts the presentation with audio and automatic animations from the first foil. You also can start this mode from any slide, pause it and so on. If you want to look the presentation without animations and audio just deselect the checkboxes.</p>
-
-<p><img src="https://raw.githubusercontent.com/MIPT-ILab/mipt-mips/master/pictures/how_to_play_narrations_in_powerpoint.png" alt=""></p>
+<p>Instructions to use downloaded material can be found on <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/LecturesInstructions">wiki page</a>.
+Lectures of previous years are available in <a href="https://github.com/MIPT-ILab/mipt-mips">repo</a>.</p>
 
 <h2>
 <a id="course-repo" class="anchor" href="#course-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course repo</h2>
