Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -78,8 +78,15 @@
 </tbody>
 </table>
 
-<p>Instructions to use downloaded material can be found on <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/LecturesInstructions">wiki page</a>.
-Lectures of previous years are available in <a href="https://github.com/MIPT-ILab/mipt-mips">repo</a>.</p>
+<p>Instructions to use downloaded material can be found on <a href="LecturesInstructions">wiki page</a>.</p>
+
+<p>Lectures of previous years archive:</p>
+
+<ul>
+<li><a href="Lectures2014">2014</a></li>
+<li><a href="Lectures2013">2013</a></li>
+<li><a href="Lectures2012">2012</a></li>
+</ul>
 
 <h2>
 <a id="course-repo" class="anchor" href="#course-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course repo</h2>
