--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 </tbody>
 </table>
 
-<p>Instructions to use downloaded material can be found on <a href="LecturesInstructions">wiki page</a>.</p>
+<p>Instructions to use downloaded material can be found on <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/LecturesInstructions">wiki page</a>.</p>
 
 <p>Lectures of previous years archive:</p>
 
 <ul>
-<li><a href="Lectures2014">2014</a></li>
-<li><a href="Lectures2013">2013</a></li>
-<li><a href="Lectures2012">2012</a></li>
+<li><a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2014">2014</a></li>
+<li><a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2013">2013</a></li>
+<li><a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2012">2012</a></li>
 </ul>
 
 <h2>
