Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -80,13 +80,7 @@
 
 <p>Instructions to use downloaded material can be found on <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/LecturesInstructions">wiki page</a>.</p>
 
-<p>Lectures of previous years archive:</p>
-
-<ul>
-<li><a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2014">2014</a></li>
-<li><a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2013">2013</a></li>
-<li><a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2012">2012</a></li>
-</ul>
+<p>Lectures of previous years archive: <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2014">2014</a>, <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2013">2013</a>, <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2012">2012</a>.</p>
 
 <h2>
 <a id="course-repo" class="anchor" href="#course-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course repo</h2>
