Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
 <a id="brief-changes-history" class="anchor" href="#brief-changes-history" aria-hidden="true"><span class="octicon octicon-link"></span></a>Brief changes history</h3>
 
 <ul>
-<li>2009/2010: Alexandr Titov and Nikolay Kosarev have started "<a href="https://github.com/MIPT-ILab/mdsp">MDSP simulator</a>" project to create light version of functional and clock-precise simulators of a microprocessor optimized for digital signal processing (DSP) for MIPT students education.</li>
-<li>2010/2011: MDSP simulator has been continued by Alexandr Titov, Yuriy Baida and Grigory Rechistov.</li>
-<li>2011/2012: New mentor team consisted of Alexander Titov and Pavel Kryukov has taken direction to making course more about theory than simulation.</li>
-<li>2012/2013: Complicated MDSP ISA has been changed to more common MIPS and project got its current pun name "MIPT-MIPS".</li>
-<li>2013/2014 — 2014/2015: Alexandr and Pavel continued MIPT-MIPS project, adding new lectures material and assignments.</li>
-<li>2015/2016: Project moves from GoogleCode SVN to GitHub. The new mentors team consists of Pavel Kryukov and Igor Smirnov.</li>
+<li>2009: Alexandr Titov and Nikolay Kosarev have started "<a href="https://github.com/MIPT-ILab/mdsp">MDSP simulator</a>" project to create light version of functional and clock-precise simulators of a microprocessor optimized for digital signal processing (DSP) for MIPT students education.</li>
+<li>2010: MDSP simulator has been continued by Alexandr Titov, Yuriy Baida and Grigory Rechistov.</li>
+<li>2011: New mentor team consisted of Alexander Titov and Pavel Kryukov has taken direction to making course more about theory than simulation.</li>
+<li>2012: Complicated MDSP ISA has been changed to more common MIPS and project got its current pun name "MIPT-MIPS".</li>
+<li>2013 — 2015: Alexandr and Pavel continued MIPT-MIPS project, adding new lectures material and assignments.</li>
+<li>2015: Project moves from GoogleCode SVN to GitHub. The new mentors team consists of Pavel Kryukov and Igor Smirnov.</li>
 </ul>
 
 <h3>
@@ -165,20 +165,20 @@
 <p>We're very pleased to thank everybody who worked together with us on this project as a mentor:</p>
 
 <ul>
-<li>Nikolay Kosarev (2009/2010)</li>
+<li>Nikolay Kosarev (2009 — 2010)</li>
 <li>
-<a href="https://github.com/megabyde">Yuriy Baida</a> (2010/2011)</li>
+<a href="https://github.com/megabyde">Yuriy Baida</a> (2010 — 2011)</li>
 <li>
-<a href="https://github.com/grigory-rechistov">Grigory Rechistov</a> (2010/2011)</li>
-<li>Alexandr Titov (2009/2010 — 2014/2015)</li>
+<a href="https://github.com/grigory-rechistov">Grigory Rechistov</a> (2010 — 2011)</li>
+<li>Alexandr Titov (2009 — 2015)</li>
 </ul>
 
 <p>Our special thanks are dedicated to MIPT-Intel laboratory staff who makes our work with student possible and efficient:</p>
 
 <ul>
-<li>Ivan Sidorenko (2009/2010)</li>
-<li>Evgeny Paramonov (2010/2011 — 2013/2014)</li>
-<li>Oksana Gareeva (2014/2015 — now)</li>
+<li>Ivan Sidorenko (2009 — 2010)</li>
+<li>Evgeny Paramonov (2010 — 2014)</li>
+<li>Oksana Gareeva (since 2014)</li>
 </ul>
 
 <p><em>Pavel and Igor</em></p>
