Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <p>Lectures of previous years archive: <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2014">2014</a>, <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2013">2013</a>, <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2012">2012</a>.</p>
 
 <h2>
-<a id="course-repo" class="anchor" href="#course-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course repo</h2>
+<a id="assignments-repo" class="anchor" href="#assignments-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Assignments repo</h2>
 
 <p>In our <a href="https://github.com/MIPT-ILab/mipt-mips-2015">production repo</a> you may find C++ sources required to complete this year course assignments — implementation of MIPS simulator.</p>
 
