Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p>More information about MIPT Intel lab history and goals is available on <a href="http://mipt.ru/drec/about/ilab/about.php">website</a> (in Russian).</p>
 
 <h2>
-<a id="course-materials" class="anchor" href="#course-materials" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course materials</h2>
+<a id="lectures-on-computer-architecture" class="anchor" href="#lectures-on-computer-architecture" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lectures on Computer Architecture</h2>
 
 <p>Here you may find lectures on the computer architecture, which are read in 2015 year:</p>
 
