--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 <td align="center">1</td>
 <td align="center">19 Sep</td>
 <td>L1: Project intro</td>
-<td><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_1__19_Sep__Project_Introduction__Rus_text__Rus_audio.pptx?raw=true">PPTX</a></td>
+<td><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_1__19_Sep__Project_Introduction__Rus_text__Rus_audio.pptx?raw=true">Rus text, No audio</a></td>
 <td></td>
 </tr>
 <tr>
 <td align="center">2</td>
 <td align="center">26 Sep</td>
 <td>P1: Basics of Simulator Development</td>
-<td><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_1__26_Sep__Basics_of_Simulator_Development__Eng_text__No_audio.pptx?raw=true">PPTX</a></td>
+<td><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_1__26_Sep__Basics_of_Simulator_Development__Eng_text__No_audio.pptx?raw=true">Eng text, No audio</a></td>
 <td>Commit your name into members.txt file. Get help in our <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Git-&amp;-GitHub-cheat-sheet">Git &amp; GitHub cheat sheet</a>
 </td>
 </tr>
