Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <h2>
 <a id="assignments-repo" class="anchor" href="#assignments-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Assignments repo</h2>
 
-<p>In our <a href="https://github.com/MIPT-ILab/mipt-mips-2015">production repo</a> you may find C++ sources required to complete this year course assignments — implementation of MIPS simulator.</p>
+<p>In our <a href="https://github.com/MIPT-ILab/mipt-mips-2015">production repo</a> you may find C++ sources required to complete this year course assignments — step-by-step implementation of MIPS simulator.</p>
 
 <p>That repo has a lot of useful <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki">Wiki manuals</a> about Git, MIPS, C++, Make utilites and so on.</p>
 
