Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <table>
 <thead>
 <tr>
-<th align="center">Week #</th>
+<th align="center">ww#</th>
 <th align="center">Date</th>
 <th>Lectures, practicums and tests</th>
 <th>Links</th>
