--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 
 <ul>
 <li>
-<em><a href="http://lib.mipt.ru/book/267604/">Computer Organization and Design: The Hardware/Software Interface, Patterson D.A., Hennessy J.L., 3rd Edition</a> (Eng)</em> -- the main book for this course. It contains all that you need to know about the computer architecture and MIPS ISA.</li>
+<em><a href="http://lib.mipt.ru/book/267604/">Computer Organization and Design: The Hardware/Software Interface, Patterson D.A., Hennessy J.L., 3rd Edition</a> (Eng)</em> — the main book for this course. It contains all that you need to know about the computer architecture and MIPS ISA.</li>
 <li>
-<em><a href="https://www.coursera.org/course/comparch">Computer Architecture Online Course by David Wentzlaff</a> at <a href="http://www.coursera.org">coursera.org</a> (Eng)</em> -- one of the best online course on Computer Architecture.</li>
+<em><a href="https://www.coursera.org/course/comparch">Computer Architecture Online Course by David Wentzlaff</a> at <a href="http://www.coursera.org">coursera.org</a> (Eng)</em> — one of the best online course on Computer Architecture.</li>
 </ul>
 
 <h3>
@@ -103,9 +103,9 @@
 
 <ul>
 <li>
-<em><a href="http://lib.mipt.ru/book/27518/">C++ manual, Herbert Schildt, 3rd edition</a></em> (Rus) -- this is the main book for studing C++ in this project. The complexity growths from the zero level, thus, even if you don't know C you can learn C++ using this book.</li>
+<em><a href="http://lib.mipt.ru/book/27518/">C++ manual, Herbert Schildt, 3rd edition</a></em> (Rus) — this is the main book for studing C++ in this project. The complexity growths from the zero level, thus, even if you don't know C you can learn C++ using this book.</li>
 <li>
-<em><a href="http://lib.mipt.ru/book/266005">The C programming language, Kernighan B.W., Ritchie D.M.</a></em> (Rus) -- although we are working mostly with C++, some elegant solutions can be made with "pure C", which means "K&amp;R C".</li>
+<em><a href="http://lib.mipt.ru/book/266005">The C programming language, Kernighan B.W., Ritchie D.M.</a></em> (Rus) — although we are working mostly with C++, some elegant solutions can be made with "pure C", which means "K&amp;R C".</li>
 <li>
 <em><a href="http://www.ckluk.org/ck/papers/asim_ieeecomputer.pdf">Asim: A Performance Model Framework</a></em> (Eng) is a paper about framework for CPU performance modeling, including features that we're reusing for MIPT-MIPS simulator.</li>
 </ul>
@@ -115,11 +115,11 @@
 
 <ul>
 <li>
-<em><a href="http://www.mrc.uidaho.edu/mrc/people/jff/digital/MIPSir.html">MIPS Instruction Reference</a></em> -- the detailed list of MIPS instructions.</li>
+<em><a href="http://www.mrc.uidaho.edu/mrc/people/jff/digital/MIPSir.html">MIPS Instruction Reference</a></em> — the detailed list of MIPS instructions.</li>
 <li>
-<em><a href="http://www.mipshelper.com/mips-converter.php">MIPS Instruction Converter</a></em> -- the good tool investigate MIPS instruction encoding.</li>
+<em><a href="http://www.mipshelper.com/mips-converter.php">MIPS Instruction Converter</a></em> — the good tool investigate MIPS instruction encoding.</li>
 <li>
-<em><a href="http://courses.missouristate.edu/kenvollmar/mars/help/syscallhelp.html">MARS Syscalls Funstions</a></em> -- system calls that are implemented in MARS MIPS simulator and we re-use</li>
+<em><a href="http://courses.missouristate.edu/kenvollmar/mars/help/syscallhelp.html">MARS Syscalls Funstions</a></em> — system calls that are implemented in MARS MIPS simulator and we re-use</li>
 </ul>
 
 <h2>
