--- a/index.html
+++ b/index.html
@@ -47,28 +47,26 @@
 <tr>
 <th align="center">Date</th>
 <th>Lectures, practicums and tests</th>
-<th>Links</th>
 <th>Homework</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td align="center">19 Sep</td>
-<td>L1: Project intro</td>
-<td><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_1__19_Sep__Project_Introduction__Rus_text__Rus_audio.pptx?raw=true">Rus text, No audio</a></td>
+<td>L1: Project intro <br> <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_1__19_Sep__Project_Introduction__Rus_text__Rus_audio.pptx?raw=true">Rus text, No audio</a>
+</td>
 <td></td>
 </tr>
 <tr>
 <td align="center">26 Sep</td>
-<td>P1: Basics of Simulator Development</td>
-<td><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_1__26_Sep__Basics_of_Simulator_Development__Eng_text__No_audio.pptx?raw=true">Eng text, No audio</a></td>
+<td>P1: Basics of Simulator Development <br> <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_1__26_Sep__Basics_of_Simulator_Development__Eng_text__No_audio.pptx?raw=true">Eng text, No audio</a>
+</td>
 <td>Commit your name into members.txt file. Get help in our <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Git-&amp;-GitHub-cheat-sheet">Git &amp; GitHub cheat sheet</a>
 </td>
 </tr>
 <tr>
 <td align="center">03 Oct</td>
 <td>L2: Layers of Computer Science, ISA and uArch</td>
-<td></td>
 <td></td>
 </tr>
 </tbody>
