Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 <h2>
 <a id="lectures-on-computer-architecture" class="anchor" href="#lectures-on-computer-architecture" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lectures on Computer Architecture</h2>
 
-<p>Here you may find lectures on the computer architecture, which are read in 2015 year:</p>
+<p>Here you may find lectures on the computer architecture, simulation practicums and tests of 2015/2016 year:</p>
 
 <table>
 <thead>
 <tr>
 <th align="center">Date</th>
-<th>Lectures, practicums and tests</th>
+<th>Event</th>
 <th>Homework</th>
 </tr>
 </thead>
