Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <table>
 <thead>
 <tr>
+<th align="center">ww#</th>
 <th align="center">Date</th>
 <th>Event</th>
 <th>Homework</th>
@@ -52,6 +53,7 @@
 </thead>
 <tbody>
 <tr>
+<td align="center">1</td>
 <td align="center">19 Sep</td>
 <td>
 <strong>L1: Project intro</strong> <br> <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_1__19_Sep__Project_Introduction__Rus_text__Rus_audio.pptx?raw=true">Rus text, No audio</a>
@@ -59,6 +61,7 @@
 <td></td>
 </tr>
 <tr>
+<td align="center">2</td>
 <td align="center">26 Sep</td>
 <td>
 <strong>P1: Basics of Simulator Development</strong> <br> <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_1__26_Sep__Basics_of_Simulator_Development__Eng_text__No_audio.pptx?raw=true">Eng text, No audio</a>
@@ -67,6 +70,7 @@
 </td>
 </tr>
 <tr>
+<td align="center">3</td>
 <td align="center">03 Oct</td>
 <td><strong>L2: Layers of Computer Science, ISA and uArch</strong></td>
 <td></td>
