Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <table>
 <thead>
 <tr>
-<th align="center">ww#</th>
+<th align="center">w</th>
 <th align="center">Date</th>
 <th>Event</th>
 <th>Homework</th>
