--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
 <td><strong>L2: Layers of Computer Science, ISA and uArch</strong></td>
 <td></td>
 </tr>
+<tr>
+<td align="center">4</td>
+<td align="center">10 Oct</td>
+<td><strong><em>Upcoming event</em></strong></td>
+<td></td>
+</tr>
+<tr>
+<td align="center">5</td>
+<td align="center">17 Oct</td>
+<td><strong><em>Upcoming event</em></strong></td>
+<td>Deadline for the 1st assignment</td>
+</tr>
 </tbody>
 </table>
 
