Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
 <a href="https://github.com/megabyde">Yuriy Baida</a> (2010 — 2011)</li>
 <li>
 <a href="https://github.com/grigory-rechistov">Grigory Rechistov</a> (2010 — 2011)</li>
-<li>Alexandr Titov (2009 — 2015)</li>
+<li>
+<a href="https://github.com/alexander-titov">Alexandr Titov</a> (2009 — 2015)</li>
 </ul>
 
 <p>Our special thanks are dedicated to MIPT-Intel laboratory staff who makes our work with student possible and efficient:</p>
