--- a/index.html
+++ b/index.html
@@ -102,99 +102,9 @@
 <p>That repo has a lot of useful <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki">Wiki manuals</a> about Git, MIPS, C++, Make utilites and so on.</p>
 
 <h2>
-<a id="useful-books-and-materials" class="anchor" href="#useful-books-and-materials" aria-hidden="true"><span class="octicon octicon-link"></span></a>Useful books and materials</h2>
-
-<h3>
-<a id="microprocessor-archuarch" class="anchor" href="#microprocessor-archuarch" aria-hidden="true"><span class="octicon octicon-link"></span></a>Microprocessor Arch/uArch</h3>
-
-<ul>
-<li>
-<em><a href="http://lib.mipt.ru/book/267604/">Computer Organization and Design: The Hardware/Software Interface, Patterson D.A., Hennessy J.L., 3rd Edition</a> (Eng)</em> — the main book for this course. It contains all that you need to know about the computer architecture and MIPS ISA.</li>
-<li>
-<em><a href="https://www.coursera.org/course/comparch">Computer Architecture Online Course by David Wentzlaff</a> at <a href="http://www.coursera.org">coursera.org</a> (Eng)</em> — one of the best online course on Computer Architecture.</li>
-</ul>
-
-<h3>
-<a id="programming" class="anchor" href="#programming" aria-hidden="true"><span class="octicon octicon-link"></span></a>Programming</h3>
-
-<ul>
-<li>
-<em><a href="http://lib.mipt.ru/book/27518/">C++ manual, Herbert Schildt, 3rd edition</a></em> (Rus) — this is the main book for studing C++ in this project. The complexity growths from the zero level, thus, even if you don't know C you can learn C++ using this book.</li>
-<li>
-<em><a href="http://lib.mipt.ru/book/266005">The C programming language, Kernighan B.W., Ritchie D.M.</a></em> (Rus) — although we are working mostly with C++, some elegant solutions can be made with "pure C", which means "K&amp;R C".</li>
-<li>
-<em><a href="http://www.ckluk.org/ck/papers/asim_ieeecomputer.pdf">Asim: A Performance Model Framework</a></em> (Eng) is a paper about framework for CPU performance modeling, including features that we're reusing for MIPT-MIPS simulator.</li>
-</ul>
-
-<h3>
-<a id="mips" class="anchor" href="#mips" aria-hidden="true"><span class="octicon octicon-link"></span></a>MIPS</h3>
-
-<ul>
-<li>
-<em><a href="http://www.mrc.uidaho.edu/mrc/people/jff/digital/MIPSir.html">MIPS Instruction Reference</a></em> — the detailed list of MIPS instructions.</li>
-<li>
-<em><a href="http://www.mipshelper.com/mips-converter.php">MIPS Instruction Converter</a></em> — the good tool investigate MIPS instruction encoding.</li>
-<li>
-<em><a href="http://courses.missouristate.edu/kenvollmar/mars/help/syscallhelp.html">MARS Syscalls Funstions</a></em> — system calls that are implemented in MARS MIPS simulator and we re-use</li>
-</ul>
-
-<h2>
 <a id="about-us" class="anchor" href="#about-us" aria-hidden="true"><span class="octicon octicon-link"></span></a>About us</h2>
 
-<h3>
-<a id="brief-changes-history" class="anchor" href="#brief-changes-history" aria-hidden="true"><span class="octicon octicon-link"></span></a>Brief changes history</h3>
-
-<ul>
-<li>2009: Alexandr Titov and Nikolay Kosarev have started "<a href="https://github.com/MIPT-ILab/mdsp">MDSP simulator</a>" project to create light version of functional and clock-precise simulators of a microprocessor optimized for digital signal processing (DSP) for MIPT students education.</li>
-<li>2010: MDSP simulator has been continued by Alexandr Titov, Yuriy Baida and Grigory Rechistov.</li>
-<li>2011: New mentor team consisted of Alexander Titov and Pavel Kryukov has taken direction to making course more about theory than simulation.</li>
-<li>2012: Complicated MDSP ISA has been changed to more common MIPS and project got its current pun name "MIPT-MIPS".</li>
-<li>2013 — 2015: Alexandr and Pavel continued MIPT-MIPS project, adding new lectures material and assignments.</li>
-<li>2015: Project moves from GoogleCode SVN to GitHub. The new mentors team consists of Pavel Kryukov and Igor Smirnov.</li>
-</ul>
-
-<h3>
-<a id="current-mentors" class="anchor" href="#current-mentors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current mentors</h3>
-
-<table>
-<thead>
-<tr>
-<th align="center"><a href="https://github.com/pavelkryukov">Pavel Kryukov</a></th>
-<th align="center"><a href="https://github.com/igorsmir-ilab">Igor Smirnov</a></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td align="center"><img src="https://avatars3.githubusercontent.com/u/11466405?s=150" alt=""></td>
-<td align="center"><img src="https://avatars3.githubusercontent.com/u/13997956?s=150" alt=""></td>
-</tr>
-</tbody>
-</table>
-
-<h3>
-<a id="special-thanks" class="anchor" href="#special-thanks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Special thanks</h3>
-
-<p>We're very pleased to thank everybody who worked together with us on this project as a mentor:</p>
-
-<ul>
-<li>Nikolay Kosarev (2009 — 2010)</li>
-<li>
-<a href="https://github.com/megabyde">Yuriy Baida</a> (2010 — 2011)</li>
-<li>
-<a href="https://github.com/grigory-rechistov">Grigory Rechistov</a> (2010 — 2011)</li>
-<li>
-<a href="https://github.com/alexander-titov">Alexandr Titov</a> (2009 — 2015)</li>
-</ul>
-
-<p>Our special thanks are dedicated to MIPT-Intel laboratory staff who makes our work with student possible and efficient:</p>
-
-<ul>
-<li>Ivan Sidorenko (2009 — 2010)</li>
-<li>Evgeny Paramonov (2010 — 2014)</li>
-<li>Oksana Gareeva (since 2014)</li>
-</ul>
-
-<p><em>Pavel and Igor</em></p>
+<p>The project has been started in 2009 year as part of Intel lab's acivity in MIPT. Since 2015, it is mentored by <a href="https://github.com/pavelkryukov">Pavel Kryukov</a> and <a href="https://github.com/igorsmir-ilab">Igor Smirnov</a>.</p>
       </section>
     </div>
 
