--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <h2>
 <a id="about-us" class="anchor" href="#about-us" aria-hidden="true"><span class="octicon octicon-link"></span></a>About us</h2>
 
-<p>The project has been started in 2009 year as part of Intel lab's acivity in MIPT. Since 2015, it is mentored by <a href="https://github.com/pavelkryukov">Pavel Kryukov</a> and <a href="https://github.com/igorsmir-ilab">Igor Smirnov</a>.</p>
+<p>The project has been started in 2009 year as part of Intel lab's acivity in MIPT. Since 2015, it is mentored by <a href="https://github.com/pavelkryukov">Pavel Kryukov</a> and <a href="https://github.com/igorsmir-ilab">Igor Smirnov</a>. For more information, check <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/AboutUs">this wiki page</a> and <a href="http://ilab.fizteh.ru">Intel lab's site</a></p>
       </section>
     </div>
 
