Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>This project is a part of <a href="http://ilab.fizteh.ru">Intel lab's</a> activity at <a href="http://phystech.edu/about/aboutmipt.html">Moscow Institute of Physics and Technology</a> (MIPT). The project is being developed by a group of students under the guidance of Intel employees.</p>
+        <p>This project is a part of <a href="http://ilab.fizteh.ru">Intel lab's</a> activity at <a href="http://phystech.edu/">Moscow Institute of Physics and Technology</a> (MIPT). The project is being developed by a group of students under the guidance of Intel employees.</p>
 
 <p>The aim of the project is to teach the students the computer architecture through development of a microprocessor implementing the <a href="http://en.wikipedia.org/wiki/MIPS32">MIPS</a> instruction set in both functional and performance simulators.</p>
 
