Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <td align="center">1</td>
 <td align="center">19 Sep</td>
 <td>
-<strong>L1: Project intro</strong> <br> <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_1__19_Sep__Project_Introduction__Rus_text__Rus_audio.pptx?raw=true">Rus text, No audio</a>
+<strong>L1: Project intro</strong> <br> <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_1__19_Sep__Project_Introduction__Rus_text__No_audio.pptx?raw=true">Rus text, No audio</a>
 </td>
 <td></td>
 </tr>
@@ -73,7 +73,8 @@
 <td align="center">3</td>
 <td align="center">03 Oct</td>
 <td><strong>L2: Layers of Computer Science, ISA and uArch</strong></td>
-<td></td>
+<td>Start <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Assignment-1">1st assignment</a>
+</td>
 </tr>
 <tr>
 <td align="center">4</td>
