--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 <td align="center">3</td>
 <td align="center">03 Oct</td>
 <td><strong>L2: Layers of Computer Science, ISA and uArch</strong></td>
-<td>Start <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Assignment-1">1st assignment</a>
+<td>Start <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Assignment-1">1st assignment</a><br><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__No_audio.pptx?raw=true">Eng text, No audio</a>
 </td>
 </tr>
 <tr>
 <td align="center">4</td>
 <td align="center">10 Oct</td>
-<td><strong><em>Upcoming event</em></strong></td>
+<td><strong>L3: Combinational Circuits</strong></td>
 <td></td>
 </tr>
 <tr>
