Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
 <tr>
 <td align="center">3</td>
 <td align="center">03 Oct</td>
-<td><strong>L2: Layers of Computer Science, ISA and uArch</strong></td>
-<td>Start <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Assignment-1">1st assignment</a><br><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__No_audio.pptx?raw=true">Eng text, No audio</a>
+<td>
+<strong>L2: Layers of Computer Science, ISA and uArch</strong><br><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__No_audio.pptx?raw=true">Eng text, No audio</a>
+</td>
+<td>Start <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Assignment-1">1st assignment</a>
 </td>
 </tr>
 <tr>
