Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -90,6 +90,20 @@
 <td><strong><em>Upcoming event</em></strong></td>
 <td>Deadline for the 1st assignment</td>
 </tr>
+<tr>
+<td align="center">6</td>
+<td align="center">24 Oct</td>
+<td><strong><em>Upcoming event</em></strong></td>
+<td>Get ready for upcoming test</td>
+</tr>
+<tr>
+<td align="center">7</td>
+<td align="center">31 Oct</td>
+<td>
+<strong>Test 1:</strong><br>Questions based on the material of the L2 — L5<br>No questions on semiconductors, n/p-doping and transistor structure!<br>Questions on C++ (1st and 2nd chapters of Schildt manual)<br>
+</td>
+<td></td>
+</tr>
 </tbody>
 </table>
 
