Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <tr>
 <td align="center">4</td>
 <td align="center">10 Oct</td>
-<td><strong>L3: Combinational Circuits</strong></td>
+<td><strong>L3: Boolean Algebra. Combinational Circuits</strong></td>
 <td></td>
 </tr>
 <tr>
