Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <tr>
 <td align="center">5</td>
 <td align="center">17 Oct</td>
-<td><strong><em>Upcoming event</em></strong></td>
+<td><strong>L4: Integrated Circuits Basics</strong></td>
 <td>Deadline for the 1st assignment</td>
 </tr>
 <tr>
