--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 <h2>
 <a id="lectures-on-computer-architecture" class="anchor" href="#lectures-on-computer-architecture" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lectures on Computer Architecture</h2>
 
-<p>Here you may find lectures on the computer architecture, simulation practicums and tests of 2015/2016 year:</p>
+<p>Here you may find lectures on the computer architecture, simulation practicums and tests of 2015/2016 year.
+Project members attend these events in 19:00 at room 123 of MIPT Main Building.</p>
 
 <table>
 <thead>
