--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Project members attend these events in 19:00 at room 123 of MIPT Main Building.<
 <td align="center">3</td>
 <td align="center">03 Oct</td>
 <td>
-<strong>L2: Layers of Computer Science, ISA and uArch</strong><br><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__No_audio.pptx?raw=true">Eng text, No audio</a>
+<strong>L2: Layers of Computer Science, ISA and uArch</strong><br><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__No_audio.pptx?raw=true">Eng text, No audio</a><br><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__Rus_audio.pptx?raw=true">Eng text, Rus audio</a>
 </td>
 <td>Start <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Assignment-1">1st assignment</a>
 </td>
