--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Project members attend these events in 19:00 at room 123 of MIPT Main Building.<
 <td align="center">1</td>
 <td align="center">19 Sep</td>
 <td>
-<strong>L1: Project intro</strong> <br> <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_1__19_Sep__Project_Introduction__Rus_text__No_audio.pptx?raw=true">Rus text, No audio</a><br> <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_1__19_Sep__Project_Introduction__Rus_text__Rus_audio.pptx?raw=true">Rus text, Rus audio</a>
+<strong>L1: Project intro</strong> <br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_1__19_Sep__Project_Introduction__Rus_text__No_audio.pptx?raw=true">Rus text, No audio, 0.3MB</a><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_1__19_Sep__Project_Introduction__Rus_text__Rus_audio.pptx?raw=true">Rus text, Rus audio, 23 MB</a>
 </td>
 <td></td>
 </tr>
@@ -65,7 +65,7 @@ Project members attend these events in 19:00 at room 123 of MIPT Main Building.<
 <td align="center">2</td>
 <td align="center">26 Sep</td>
 <td>
-<strong>P1: Basics of Simulator Development</strong> <br> <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_1__26_Sep__Basics_of_Simulator_Development__Eng_text__No_audio.pptx?raw=true">Eng text, No audio</a>
+<strong>P1: Basics of Simulator Development</strong> <br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_1__26_Sep__Basics_of_Simulator_Development__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.6MB</a>
 </td>
 <td>Commit your name into members.txt file. Get help in our <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Git-&amp;-GitHub-cheat-sheet">Git &amp; GitHub cheat sheet</a>
 </td>
@@ -74,7 +74,7 @@ Project members attend these events in 19:00 at room 123 of MIPT Main Building.<
 <td align="center">3</td>
 <td align="center">03 Oct</td>
 <td>
-<strong>L2: Layers of Computer Science, ISA and uArch</strong><br><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__No_audio.pptx?raw=true">Eng text, No audio</a><br><a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__Rus_audio.pptx?raw=true">Eng text, Rus audio</a>
+<strong>L2: Layers of Computer Science, ISA and uArch</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 9.2MB</a><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__Rus_audio.pptx?raw=true">Eng text, Rus audio, 77MB</a>
 </td>
 <td>Start <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Assignment-1">1st assignment</a>
 </td>
