Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Project members attend these events in 19:00 at room 123 of MIPT Main Building.<
 <td align="center">7</td>
 <td align="center">31 Oct</td>
 <td>
-<strong>Test 1:</strong><br>Review <strong>L2−L5</strong> material<br>(excluding semiconductors, n/p-doping and transistor structure)<br>Review 1st and 2nd chapters of Schildt C++ manual<br>
+<strong>Test 1:</strong><br> • Review <strong>L2−L5</strong> material<br>(excluding semiconductors, n/p-doping and transistor structure)<br> • Review 1st and 2nd chapters of Schildt C++ manual<br>
 </td>
 <td></td>
 </tr>
