Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Project participants attend these events in 19:00 at room 123 of MIPT Main Build
 <td align="center">4</td>
 <td align="center">10 Oct</td>
 <td>
-<strong>L3: Boolean Algebra. Combinational Circuits</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_3__10_Oct__Combinational_Circuits__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.7MB</a>
+<strong>L3: Boolean Algebra. Combinational Circuits</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_3__10_Oct__Combinational_Circuits__Eng_text__Rus_audio.pptx?raw=true">Eng text, Rus audio, 66MB</a><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_3__10_Oct__Combinational_Circuits__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.7MB</a>
 </td>
 <td></td>
 </tr>
