--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <a id="lectures-on-computer-architecture" class="anchor" href="#lectures-on-computer-architecture" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lectures on Computer Architecture</h2>
 
 <p>Here you may find lectures on the computer architecture, simulation practicums and tests of 2015/2016 year.
-Project participants attend these events in 19:00 at room 123 of MIPT Main Building.</p>
+Project participants attend these events at 18:40, room 123 of MIPT Main Building.</p>
 
 <table>
 <thead>
@@ -65,7 +65,7 @@ Project participants attend these events in 19:00 at room 123 of MIPT Main Build
 <td align="center">2</td>
 <td align="center">26 Sep</td>
 <td>
-<strong>P1: Basics of Simulator Development</strong> <br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_1__26_Sep__Basics_of_Simulator_Development__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.6MB</a>
+<strong>P1: Basics of Simulator Development</strong> <br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_1__26_Sep__Basics_of_Simulator_Development__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.6 MB</a>
 </td>
 <td>Commit your name into members.txt file. Get help in our <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Git-&amp;-GitHub-cheat-sheet">Git &amp; GitHub cheat sheet</a>
 </td>
@@ -74,7 +74,7 @@ Project participants attend these events in 19:00 at room 123 of MIPT Main Build
 <td align="center">3</td>
 <td align="center">03 Oct</td>
 <td>
-<strong>L2: Layers of Computer Science, ISA and uArch</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__Rus_audio.pptx?raw=true">Eng text, Rus audio, 77MB</a><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 9.2MB</a>
+<strong>L2: Layers of Computer Science, ISA and uArch</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__Rus_audio.pptx?raw=true">Eng text, Rus audio, 77 MB</a><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_2__20_Sep__Layers_of_Computer_Science__ISA_and_uArch___Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 9.2 MB</a>
 </td>
 <td>Start <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Assignment-1">1st assignment</a>
 </td>
@@ -83,7 +83,7 @@ Project participants attend these events in 19:00 at room 123 of MIPT Main Build
 <td align="center">4</td>
 <td align="center">10 Oct</td>
 <td>
-<strong>L3: Boolean Algebra. Combinational Circuits</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_3__10_Oct__Combinational_Circuits__Eng_text__Rus_audio.pptx?raw=true">Eng text, Rus audio, 66MB</a><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_3__10_Oct__Combinational_Circuits__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.7MB</a>
+<strong>L3: Boolean Algebra. Combinational Circuits</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_3__10_Oct__Combinational_Circuits__Eng_text__Rus_audio.pptx?raw=true">Eng text, Rus audio, 66 MB</a><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_3__10_Oct__Combinational_Circuits__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.7 MB</a>
 </td>
 <td></td>
 </tr>
