Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <tr>
 <td align="center">6</td>
 <td align="center">24 Oct</td>
-<td><strong><em>Upcoming event</em></strong></td>
+<td><strong>L5: Sequential Circuits</strong></td>
 <td>Get ready for upcoming test</td>
 </tr>
 <tr>
