--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="MIPT-MIPS : Functional and performance simulators for MIPS-based microprocessor">
+    <meta name="description" content="MIPT-MIPS : Lectures on Computer Architecture + functional and performance simulators for MIPS-based CPU">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/MIPT-ILab/mipt-mips">View on GitHub</a>
 
           <h1 id="project_title">MIPT-MIPS</h1>
-          <h2 id="project_tagline">Functional and performance simulators for MIPS-based microprocessor</h2>
+          <h2 id="project_tagline">Lectures on Computer Architecture + functional and performance simulators for MIPS-based CPU</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/MIPT-ILab/mipt-mips/zipball/master">Download this project as a .zip file</a>
