--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">5</td>
 <td align="center">17 Oct</td>
 <td><strong>L4: Integrated Circuits Basics</strong></td>
-<td>Deadline for the 1st assignment</td>
+<td></td>
 </tr>
 <tr>
 <td align="center">6</td>
 <td align="center">24 Oct</td>
 <td><strong>L5: Sequential Circuits</strong></td>
-<td>Get ready for upcoming test</td>
+<td>Deadline for the 1st assignment.<br> Get ready for upcoming test.</td>
 </tr>
 <tr>
 <td align="center">7</td>
