Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <p>Lectures of previous years archive: <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2014">2014</a>, <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2013">2013</a>, <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/Lectures2012">2012</a>.</p>
 
 <h2>
-<a id="assignments-repo" class="anchor" href="#assignments-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Assignments repo</h2>
+<a id="assignments-repository" class="anchor" href="#assignments-repository" aria-hidden="true"><span class="octicon octicon-link"></span></a>Assignments repository</h2>
 
-<p>In our <a href="https://github.com/MIPT-ILab/mipt-mips-2015">production repo</a> you may find C++ sources required to complete this year course assignments — step-by-step implementation of MIPS simulator.</p>
+<p>In our <a href="https://github.com/MIPT-ILab/mipt-mips-2015">production repository</a> you may find C++ sources required to complete this year course assignments — step-by-step implementation of MIPS simulator.</p>
 
 <p>That repo has a lot of useful <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki">Wiki manuals</a> about Git, MIPS, C++, Make utilites and so on.</p>
 
