--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <tr>
 <td align="center">5</td>
 <td align="center">17 Oct</td>
-<td><strong>L4: Integrated Circuits Basics</strong></td>
+<td>
+<strong>L4: Integrated Circuits Basics</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_4__17_Oct__Integrated_Circuits_Basics__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 1.8 MB</a>
+</td>
 <td></td>
 </tr>
 <tr>
