Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">5</td>
 <td align="center">17 Oct</td>
 <td>
-<strong>L4: Integrated Circuits Basics</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_4__17_Oct__Integrated_Circuits_Basics__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 1.8 MB</a>
+<strong>L4: Integrated Circuits Basics</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_4__17_Oct__Integrated_Circuits_Basics__Rus_text__No_audio.pptx?raw=true">Eng text, Rus audio, 72 MB</a><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_4__17_Oct__Integrated_Circuits_Basics__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 1.8 MB</a>
 </td>
 <td></td>
 </tr>
