Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 </td>
 <td></td>
 </tr>
+<tr>
+<td align="center">8</td>
+<td align="center">07 Nov</td>
+<td>
+<strong>L6: MIPS ISA</strong><br><strong>P2: MIPS Instruction Decoder</strong>
+</td>
+<td></td>
+</tr>
 </tbody>
 </table>
 
