Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <tr>
 <td align="center">6</td>
 <td align="center">24 Oct</td>
-<td><strong>L5: Sequential Circuits</strong></td>
+<td>
+<strong>L5: Sequential Circuits</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_5__24_Oct__Sequential_Circuits__Eng_text__No_audio.pptx?raw=true">Eng text, Rus audio, 46 MB</a><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_5__24_Oct__Sequential_Circuits__Eng_text__Rus_audio.pptx?raw=true">Eng text, No audio, 0.4 MB</a>
+</td>
 <td>Deadline for the 1st assignment.<br> Get ready for upcoming test.</td>
 </tr>
 <tr>
