Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -117,6 +117,13 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 </td>
 <td></td>
 </tr>
+<tr>
+<td align="center">9</td>
+<td align="center">14 Nov</td>
+<td>*<em><em>Upcoming event</em></em>
+</td>
+<td>Publishment of 2nd assignment</td>
+</tr>
 </tbody>
 </table>
 
