--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <tr>
 <td align="center">9</td>
 <td align="center">14 Nov</td>
-<td>*<em><em>Upcoming event</em></em>
-</td>
+<td><strong><em>Upcoming event</em></strong></td>
 <td>Publishment of 2nd assignment</td>
 </tr>
 </tbody>
