Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">8</td>
 <td align="center">07 Nov</td>
 <td>
-<strong>L6: MIPS ISA</strong><br><strong>P2: MIPS Instruction Decoder</strong>
+<strong>L6: MIPS ISA</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_6__07_Nov__Basics_of_MIPS_ISA__Eng_text__Rus_audio.pptx">Eng text, Rus audio, 12 MB</a><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_6__07_Nov__Basics_of_MIPS_ISA__Eng_text__No_audio.pptx">Eng text, No audio, 0.5 MB</a><br><strong>P2: MIPS Instruction Decoder</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_2__07_Nov__MIPS_disassembler__Eng_text__Rus_audio.pptx">Eng text, Rus audio, 2.5 MB</a><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_2__07_Nov__MIPS_disassembler__Eng_text__No_audio.pptx">Eng text, No audio, 0.3 MB</a>
 </td>
 <td>Publishment of 2nd assignment</td>
 </tr>
