Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <tr>
 <td align="center">9</td>
 <td align="center">14 Nov</td>
-<td><strong><em>Upcoming event</em></strong></td>
+<td><strong>L7: Single-cycle MIPS implementation</strong></td>
 <td></td>
 </tr>
 </tbody>
