--- a/index.html
+++ b/index.html
@@ -115,13 +115,26 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td>
 <strong>L6: MIPS ISA</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_6__07_Nov__Basics_of_MIPS_ISA__Eng_text__Rus_audio.pptx">Eng text, Rus audio, 12 MB</a><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_6__07_Nov__Basics_of_MIPS_ISA__Eng_text__No_audio.pptx">Eng text, No audio, 0.5 MB</a><br><strong>P2: MIPS Instruction Decoder</strong><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_2__07_Nov__MIPS_disassembler__Eng_text__Rus_audio.pptx">Eng text, Rus audio, 2.5 MB</a><br> • <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Practice_2__07_Nov__MIPS_disassembler__Eng_text__No_audio.pptx">Eng text, No audio, 0.3 MB</a>
 </td>
-<td>Publishment of 2nd assignment</td>
+<td>Start <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Assignment-2">2nd assignment</a>
+</td>
 </tr>
 <tr>
 <td align="center">9</td>
 <td align="center">14 Nov</td>
 <td><strong>L7: Single-cycle MIPS implementation</strong></td>
 <td></td>
+</tr>
+<tr>
+<td align="center">10</td>
+<td align="center">21 Nov</td>
+<td><strong>L8: MIPS pipelined implementation</strong></td>
+<td></td>
+</tr>
+<tr>
+<td align="center">11</td>
+<td align="center">28 Nov</td>
+<td><strong>L9: Branch prediction</strong></td>
+<td>Deadline for the 2nd assignment</td>
 </tr>
 </tbody>
 </table>
