--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <tr>
 <td align="center">9</td>
 <td align="center">14 Nov</td>
-<td><strong>L7: Single-cycle MIPS implementation</strong></td>
+<td>
+<strong>L7: Single-cycle MIPS implementation</strong><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_7__14_Nov__Single_Cycle_Implementation__Eng_text__Rus_audio.pptx?raw=true">Eng text, Rus audio, 54 MB</a><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_7__14_Nov__Single_Cycle_Implementation__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.4 MB</a>
+</td>
 <td></td>
 </tr>
 <tr>
