Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <tr>
 <td align="center">10</td>
 <td align="center">21 Nov</td>
-<td><strong>L8: MIPS pipelined implementation</strong></td>
+<td><strong>L8: Pipelining</strong></td>
 <td></td>
 </tr>
 <tr>
