Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <tr>
 <td align="center">11</td>
 <td align="center">28 Nov</td>
-<td><strong>L9: Branch prediction</strong></td>
+<td><strong>L9: Branch Prediction</strong></td>
 <td>Deadline for the 2nd assignment</td>
 </tr>
 </tbody>
