--- a/index.html
+++ b/index.html
@@ -136,7 +136,15 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">11</td>
 <td align="center">28 Nov</td>
 <td><strong>L9: Branch Prediction</strong></td>
-<td>Deadline for the 2nd assignment</td>
+<td>Deadline for the 2nd assignment.<br>Publishment of the 3rd assignment</td>
+</tr>
+<tr>
+<td align="center">12</td>
+<td align="center">05 Dec</td>
+<td>
+<strong>L10: Advanced Pipelining and Superscalar CPUs</strong><br>
+</td>
+<td></td>
 </tr>
 </tbody>
 </table>
